--- a/paper/references.bib
+++ b/paper/references.bib
@@ -116,6 +116,17 @@
   publisher={Elsevier}
 }
 
+@article{muraro2016,
+  title={A single-cell transcriptome atlas of the human pancreas},
+  author={Muraro, Mauro J and Dharmadhikari, Gitanjali and Gr{\"u}n, Dominic and Groen, Nathalie and Dielen, Tim and Jansen, Erik and van Gurp, Leon and Engelse, Marten A and Carlotti, Francoise and de Koning, Eelco JP and others},
+  journal={Cell systems},
+  volume={3},
+  number={4},
+  pages={385--394},
+  year={2016},
+  publisher={Elsevier}
+}
+
 % brain
 @article{hrvatin2018,
   title={{Single-cell analysis of experience-dependent transcriptomic states in the mouse visual cortex}},
@@ -137,6 +148,17 @@
   pages={3227--3241},
   year={2017},
   publisher={Elsevier}
+}
+
+@article{zeisel2015,
+  title={Cell types in the mouse cortex and hippocampus revealed by single-cell RNA-seq},
+  author={Zeisel, Amit and Mu{\~n}oz-Manchado, Ana B and Codeluppi, Simone and L{\"o}nnerberg, Peter and La Manno, Gioele and Jur{\'e}us, Anna and Marques, Sueli and Munguba, Hermany and He, Liqun and Betsholtz, Christer and others},
+  journal={Science},
+  volume={347},
+  number={6226},
+  pages={1138--1142},
+  year={2015},
+  publisher={American Association for the Advancement of Science}
 }
 
 % retina
